# project_ml_security_incident_prediction

./: .gitignore  README-old.md  README.md  pyproject.toml  run_3_5.py  run_4_3.py  run_4_4_and_4_5_only.py  run_5.py
config/datasets/: dataset_config.yml
config/pipelines/: active_profile.yml  base_pipeline_config.json  base_pipeline_config.yml  clustering_pipeline_config.json  clustering_pipeline_config.yml
notebooks/: 00_data_pre_analyst.ipynb  01_run_clustering_notebook.ipynb  phase2_analysis.ipynb  phase3_analysis.ipynb  phase4_analysis.ipynb  phase5_analysis.ipynb
src/crispdm/: __init__.py  main.py
src/crispdm/api/: execution_facade_api.py
src/crispdm/common/: context_facade_common.py  dict_facade_common.py  enum_registry_common.py  logging_adapter_common.py  path_service_common.py
src/crispdm/configuration/: build_factory_config.py  enum_registry_config.py  model_registry_config.py  pipeline_task_dto_config.py  read_strategy_repository_config.py  yml_repository_config.py
src/crispdm/data/: csv_loader_data.py  download_extractor_data.py  download_utils_data.py  load_loader_data.py  load_utils_data.py  persist_persister_data.py  persist_utils_data.py  profiling_profiler_data.py  profiling_utils_data.py
src/crispdm/feature/: cleaning_transformer_feature.py  engineering_transformer_feature.py  formatting_transformer_feature.py  selection_selector_feature.py
src/crispdm/interpretation/: business_alignment_evaluator_interpretation.py  cluster_interpreter_interpretation.py  deployment_reporter_interpretation.py  pipeline_auditor_interpretation.py
src/crispdm/model/: algorithm_selector_model.py  clustering_evaluator_model.py  clustering_trainer_model.py  knn_distance_analyzer_model.py  test_design_reporter_model.py
src/crispdm/phase/: phase2_understanding_runner_phase.py  phase2_understanding_runner_stage.py  phase3_preparation_runner_phase.py  phase4_modeling_runner_phase.py  phase5_evaluation_and_interpretation_phase.py
(+14 files in other folders)
